--- a/reload_all_tabs/manifest.json
+++ b/reload_all_tabs/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Reload All Tabs",
-  "version": "1.0",
-  "description": "Reload all tabs using quick keyboard shortcut: ctrl + shift + r. There are settings in 'Options' that can be modified.",
+  "version": "1.0.1",
+  "description": "Reload all tabs using keyboard shortcut: ctrl + shift + r. The settings in 'Options' allows you to add a refresh all button.",
   "icons": {
     "16": "icon16.png",
     "32": "icon32.png",
