Remove experimental contextMenu features and add that menu by default.

--- a/reload_all_tabs/manifest.json
+++ b/reload_all_tabs/manifest.json
@@ -10,7 +10,7 @@
   },
   "background_page": "background.html",
   "options_page": "options.html",
-  "permissions": ["tabs", "experimental"],
+  "permissions": ["tabs", "contextMenus"],
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*", "ftp://*/*"],
