--- a/reload_all_tabs_extension_button/manifest.json
+++ b/reload_all_tabs_extension_button/manifest.json
@@ -1,7 +1,8 @@
 {
   "name": "Reload All Tabs - Browser Action",
-  "version": "0.3",
-  "description": "If you have already installed Reload All Tabs and want a browser action button, install this too.",
+  "version": "1.0",
+  "minimum_chrome_version": "9",
+  "description": "NOTE: This extension is removed, install the main one instead.",
   "background_page": "background.html",
   "browser_action": {
     "default_icon": "icon19.png",
