reload grouped tabs and matched url tabs

--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,8 @@
   "permissions": [
     "storage",
     "tabs",
-    "contextMenus"
+    "contextMenus",
+    "tabGroups"
   ],
   "commands": {
     "reload": {
