--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Reload All Tabs",
   "version": "6.2.0",
   "manifest_version": 3,
-  "description": "Reload All tabs using keyboard shortcut (alt + shift + r), context menu or browser action button.",
+  "description": "Reload All tabs using keyboard shortcut (alt + shift + r), context menu, browser action button, or by schedule.",
   "icons": {
     "16": "img/icon16.png",
     "48": "img/icon48.png",
