--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Reload All Tabs",
-  "version": "6.2.0",
+  "version": "6.3.0",
   "manifest_version": 3,
   "description": "Reload All tabs using keyboard shortcut (alt + shift + r), context menu, browser action button, or by schedule.",
   "icons": {
@@ -18,8 +18,10 @@
   "options_page": "options.html",
   "permissions": [
     "storage",
+    "contextMenus"
+  ],
+  "optional_permissions": [
     "tabs",
-    "contextMenus",
     "tabGroups",
     "alarms"
   ],
